--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
 <body>
   <h1>TinyBrain サポートセンター</h1>
 
-  <h2>よくある質問（FAQ）</h2>
-  <ul>
-    <li><a href="./faq.html">FAQを見る</a></li>
-  </ul>
-
   <h2>お問い合わせ</h2>
 
   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeQcTM-wU0fi6XFu94_evN6FibvynZK6h-KsrCOeB5IohzKJg/viewform?embedded=true" width="640" height="510" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
 
   <p>最終更新: 2025/11</p>
+
+  <h2>Privacy</h2>
+  <ul>
+    <li><a href="./privacynextbite.html">FAQを見る</a></li>
+  </ul>
+  
 </body>
 </html>
