--- a/privacynextbite.html
+++ b/privacynextbite.html
@@ -1,33 +1,45 @@
-Privacy Policy – Nextbite
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <title>Nextbite Privacy Policy</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    body { font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; line-height: 1.6; margin: 2rem; color: #222; }
+    h1 { font-size: 1.8rem; margin-bottom: 0.5rem; }
+    h2 { margin-top: 1.5rem; font-size: 1.2rem; }
+  </style>
+</head>
+<body>
+  <h1>Privacy Policy – Nextbite</h1>
+  <p><strong>Last updated:</strong> 23 Nov 2025</p>
 
-Last updated: 23 Nov 2025
+  <p>Nextbite (“we”, “our”, “the App”) is a fasting timer and history tracker. We respect your privacy and keep data handling minimal.</p>
 
-Nextbite (“we”, “our”, “the App”) is a fasting timer and history tracker. We respect your privacy and keep data handling minimal.
+  <h2>Information We Collect</h2>
+  <p>We do not create accounts or upload personal data to our servers. All fasting entries and settings stay on your device’s local storage. Removing the app deletes this information.</p>
 
-Information We Collect
+  <h2>Ads &amp; Analytics</h2>
+  <p>The App shows banner ads via Google AdMob, which may collect device identifiers and usage data to deliver and measure ads. You can review Google’s policies at
+    <a href="https://policies.google.com/privacy" target="_blank" rel="noreferrer">policies.google.com/privacy</a>.
+    We request consent where required and honor non-personalized ads if consent is declined.</p>
 
-We do not create accounts or upload personal data to our servers.
-All fasting entries and settings stay on your device’s local storage (AsyncStorage). If you uninstall the app, that data is removed.
-Ads & Analytics
+  <h2>App Permissions</h2>
+  <p>The App only needs basic network access to load ads and uses local storage for your fasting history. We do not request optional permissions like camera or contacts.</p>
 
-The App shows banner ads via Google AdMob. AdMob may collect device identifiers and usage information to deliver and measure ads. You can review Google’s policies here: https://policies.google.com/privacy.
-We request user consent where required by law and allow non-personalized ads if consent is declined.
-App Permissions
+  <h2>Children</h2>
+  <p>The App is not directed to children under 13 and does not knowingly collect data from them.</p>
 
-The App only accesses basic device capabilities required to run (local storage, network to load ads). We do not request optional permissions (camera, contacts, etc.).
-Children
+  <h2>Data Sharing</h2>
+  <p>We do not sell or share personal information. AdMob receives ad request data solely to serve ads in the App.</p>
 
-The App is not directed at children under 13 and does not intentionally collect data from them.
-Data Sharing
+  <h2>Security</h2>
+  <p>All data remains on your device. We rely on the security provided by your operating system and Google Play for distribution.</p>
 
-We do not sell or share personal information with third parties. AdMob receives ad-request data as described above.
-Security
+  <h2>Your Choices</h2>
+  <p>You may reset advertising consent through Android’s ads settings or by reinstalling the App. To delete local data, uninstall the App—there is no server data to erase.</p>
 
-Local data stays on your device. We rely on the security features provided by your operating system and Google Play for distribution.
-Your Choices
-
-You may reset consent for ads via Android’s ads settings or reinstall the app.
-To delete local data, uninstall the app. There is no server data to delete.
-Contact
-
-If you have privacy questions, email us at [your support email].
+  <h2>Contact</h2>
+  <p>If you have privacy questions, email us at <a href="mailto:support@nextbite.app">support@nextbite.app</a>.</p>
+</body>
+</html>
