--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 </head>
 <body>
   <h1>TinyBrain サポートセンター</h1>
-
+<br>
+<br>
+<br>
   <h2>お問い合わせ</h2>
 
   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeQcTM-wU0fi6XFu94_evN6FibvynZK6h-KsrCOeB5IohzKJg/viewform?embedded=true" width="640" height="510" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
@@ -21,7 +23,7 @@
 
   <h2>Privacy</h2>
   <ul>
-    <li><a href="./privacynextbite.html">FAQを見る</a></li>
+    <li><a href="./privacynextbite.html">Privacy</a></li>
   </ul>
   
 </body>
